# spotify_info

./: .gitignore  Cargo.toml  README.md
examples/: event_based.rs  incoming.rs  multi_thread.rs
extension/: install_extension.ps1  install_extension.sh  install_extention.sh  spotify_info.js
src/: lib.rs
