[package]
name = "spotify_info"
version = "0.5.0"
edition = "2021"
authors = ["Ricky12Awesome"]
description = "Gets metadata from spotify using a spicetify extension using websockets"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Ricky12Awesome/spotify_info"
homepage = "https://github.com/Ricky12Awesome/spotify_info"
exclude = ["extension"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.18"
futures-channel = "0.3"

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.miniserde]
version = "0.1"
optional = true

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["sink", "std"]

[dependencies.tokio]
version = "1.17"
default-features = false
features = ["net"]

[dev-dependencies.tokio]
version = "1.24"
default-features = false
features = ["io-std", "macros", "net", "rt-multi-thread", "time"]

[features]
default = ["miniserde"]
use-serde = ["serde", "serde_json"]